// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SNAPSHOT Tests 1`] = `
{
  "type": "Expression",
  "value": {
    "left": {
      "children": {
        "type": "DotAccess",
        "value": {
          "type": "Identifier",
          "value": "test",
        },
      },
      "type": "Term",
      "value": {
        "type": "This",
      },
    },
    "operator": "+",
    "right": {
      "children": {
        "type": "DotAccess",
        "value": {
          "type": "Identifier",
          "value": "test2",
        },
      },
      "type": "Term",
      "value": {
        "type": "This",
      },
    },
    "type": "Operation",
  },
}
`;

exports[`SNAPSHOT Tests 2`] = `
{
  "type": "Expression",
  "value": {
    "left": {
      "left": {
        "children": {
          "type": "DotAccess",
          "value": {
            "type": "Identifier",
            "value": "test",
          },
        },
        "type": "Term",
        "value": {
          "type": "This",
        },
      },
      "operator": "+",
      "right": {
        "children": {
          "type": "DotAccess",
          "value": {
            "type": "Identifier",
            "value": "test2",
          },
        },
        "type": "Term",
        "value": {
          "type": "This",
        },
      },
      "type": "Operation",
    },
    "operator": "-",
    "right": {
      "type": "Term",
      "value": {
        "type": "Literal",
        "value": 14,
      },
    },
    "type": "Operation",
  },
}
`;

exports[`SNAPSHOT Tests 3`] = `
{
  "type": "Expression",
  "value": {
    "left": {
      "left": {
        "type": "Term",
        "value": {
          "type": "Literal",
          "value": 45,
        },
      },
      "operator": "<",
      "right": {
        "left": {
          "left": {
            "children": {
              "children": {
                "type": "DotAccess",
                "value": {
                  "type": "Identifier",
                  "value": "that",
                },
              },
              "type": "DotAccess",
              "value": {
                "type": "Identifier",
                "value": "test",
              },
            },
            "type": "Term",
            "value": {
              "type": "This",
            },
          },
          "operator": "*",
          "right": {
            "children": {
              "type": "DotAccess",
              "value": {
                "type": "Identifier",
                "value": "test2",
              },
            },
            "type": "Term",
            "value": {
              "type": "This",
            },
          },
          "type": "Operation",
        },
        "operator": "/",
        "right": {
          "left": {
            "type": "Term",
            "value": {
              "type": "Literal",
              "value": 14,
            },
          },
          "operator": "|",
          "right": {
            "left": {
              "type": "Term",
              "value": {
                "type": "Literal",
                "value": "test",
              },
            },
            "operator": "in",
            "right": {
              "left": {
                "type": "Term",
                "value": {
                  "type": "Literal",
                  "value": "hello",
                },
              },
              "operator": "and",
              "right": {
                "type": "Term",
                "value": {
                  "type": "Identifier",
                  "value": "x",
                },
              },
              "type": "Operation",
            },
            "type": "Operation",
          },
          "type": "Operation",
        },
        "type": "Operation",
      },
      "type": "Operation",
    },
    "operator": "!=",
    "right": {
      "left": {
        "type": "Term",
        "value": {
          "type": "Literal",
          "value": 12,
        },
      },
      "operator": "and",
      "right": {
        "left": {
          "type": "Term",
          "value": {
            "type": "Literal",
            "value": 45,
          },
        },
        "operator": "implies",
        "right": {
          "type": "Term",
          "value": {
            "type": "Literal",
            "value": 23,
          },
        },
        "type": "Operation",
      },
      "type": "Operation",
    },
    "type": "Operation",
  },
}
`;

exports[`SNAPSHOT Tests 4`] = `
{
  "type": "Expression",
  "value": {
    "children": {
      "children": {
        "children": {
          "type": "DotAccess",
          "value": {
            "type": "Identifier",
            "value": "strange-synt",
          },
        },
        "type": "DotAccess",
        "value": {
          "type": "Identifier",
          "value": "deliniated",
        },
      },
      "type": "DotAccess",
      "value": {
        "type": "Identifier",
        "value": "HELLO-WORLD IDENTIFIER",
      },
    },
    "type": "Term",
    "value": {
      "type": "Identifier",
      "value": "test",
    },
  },
}
`;

exports[`SNAPSHOT Tests 5`] = `
{
  "type": "Expression",
  "value": {
    "children": {
      "children": {
        "type": "DotAccess",
        "value": {
          "children": [
            {
              "type": "Expression",
              "value": {
                "left": {
                  "left": {
                    "type": "Term",
                    "value": {
                      "type": "Identifier",
                      "value": "value",
                    },
                  },
                  "operator": "!=",
                  "right": {
                    "left": {
                      "left": {
                        "type": "Term",
                        "value": {
                          "type": "Literal",
                          "value": "test",
                        },
                      },
                      "operator": "and",
                      "right": {
                        "type": "Term",
                        "value": {
                          "type": "Identifier",
                          "value": "value",
                        },
                      },
                      "type": "Operation",
                    },
                    "operator": "/",
                    "right": {
                      "type": "Term",
                      "value": {
                        "type": "Literal",
                        "value": 11,
                      },
                    },
                    "type": "Operation",
                  },
                  "type": "Operation",
                },
                "operator": "=",
                "right": {
                  "type": "Term",
                  "value": {
                    "type": "Literal",
                    "value": 12,
                  },
                },
                "type": "Operation",
              },
            },
            {
              "type": "Expression",
              "value": {
                "left": {
                  "type": "Term",
                  "value": {
                    "type": "Index",
                  },
                },
                "operator": "!=",
                "right": {
                  "left": {
                    "type": "Term",
                    "value": {
                      "type": "Total",
                    },
                  },
                  "operator": "+",
                  "right": {
                    "type": "Term",
                    "value": {
                      "type": "Variable",
                      "value": {
                        "type": "Identifier",
                        "value": "testing",
                      },
                    },
                  },
                  "type": "Operation",
                },
                "type": "Operation",
              },
            },
          ],
          "type": "Function",
          "value": {
            "type": "Identifier",
            "value": "where",
          },
        },
      },
      "type": "DotAccess",
      "value": {
        "type": "Identifier",
        "value": "test",
      },
    },
    "type": "Term",
    "value": {
      "type": "This",
    },
  },
}
`;

exports[`SNAPSHOT Tests 6`] = `
{
  "type": "Expression",
  "value": {
    "type": "Term",
    "value": {
      "type": "Literal",
      "value": "testing",
    },
  },
}
`;

exports[`SNAPSHOT Tests 7`] = `
{
  "type": "Expression",
  "value": {
    "left": {
      "left": {
        "left": {
          "left": {
            "type": "Term",
            "value": {
              "type": "Identifier",
              "value": "true",
            },
          },
          "operator": "!=",
          "right": {
            "left": {
              "type": "Term",
              "value": {
                "type": "Identifier",
                "value": "false",
              },
            },
            "operator": "and",
            "right": {
              "type": "Term",
              "value": {
                "type": "Literal",
                "value": "04:00",
              },
            },
            "type": "Operation",
          },
          "type": "Operation",
        },
        "operator": "=",
        "right": {
          "left": {
            "type": "Term",
            "value": {
              "type": "Literal",
              "value": "04:00",
            },
          },
          "operator": "and",
          "right": {
            "type": "Term",
            "value": {
              "type": "Literal",
              "value": "1980-01-01",
            },
          },
          "type": "Operation",
        },
        "type": "Operation",
      },
      "operator": "!=",
      "right": {
        "type": "Term",
        "value": {
          "type": "Literal",
          "value": "1980-01-01T00:00:00Z",
        },
      },
      "type": "Operation",
    },
    "operator": "=",
    "right": {
      "type": "Term",
      "value": {
        "type": "Literal",
        "value": "1980-01-01T00:00:00-05:00",
      },
    },
    "type": "Operation",
  },
}
`;

exports[`SNAPSHOT Tests 8`] = `
{
  "type": "Expression",
  "value": {
    "left": {
      "left": {
        "type": "Term",
        "value": {
          "type": "Literal",
          "value": 45,
        },
      },
      "operator": "-",
      "right": {
        "type": "Term",
        "value": {
          "type": "Literal",
          "value": 55.23,
        },
      },
      "type": "Operation",
    },
    "operator": "+",
    "right": {
      "type": "Term",
      "value": {
        "type": "Literal",
        "value": 0.23,
      },
    },
    "type": "Operation",
  },
}
`;

exports[`SNAPSHOT Tests 9`] = `
{
  "type": "Expression",
  "value": {
    "children": {
      "children": {
        "type": "DotAccess",
        "value": {
          "type": "Identifier",
          "value": "hello",
        },
      },
      "type": "Indexed",
      "value": {
        "type": "Expression",
        "value": {
          "left": {
            "type": "Term",
            "value": {
              "type": "Literal",
              "value": 45,
            },
          },
          "operator": "+",
          "right": {
            "left": {
              "type": "Term",
              "value": {
                "type": "Literal",
                "value": 15,
              },
            },
            "operator": "*",
            "right": {
              "type": "Term",
              "value": {
                "type": "Literal",
                "value": 3,
              },
            },
            "type": "Operation",
          },
          "type": "Operation",
        },
      },
    },
    "type": "Term",
    "value": {
      "type": "Identifier",
      "value": "this",
    },
  },
}
`;
